@@ -1,3 +1,6 @@
+2010-01-17  Nils Durner
+	* sockets functions now take/return ints instead of SOCKETs
+
 2010-01-09	Nils Durner
 	* strcasestr()
 
